# website-rs

./: Cargo.toml  README.md
private/: ca_cert.pem  ca_key.pem  cert.pem  gen_cert.sh  key.pem
src/: main.rs
static/: about.html  contact.html  index.html
static/styles/: styles.css
