[package]
name = "website-rs"
version = "0.1.0"
authors = ["Blake Ridgway <blake@blakeridgway.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.4.7", features = ["tls"] }
rocket_contrib = "0.4.7"